--- a/src/main/resources/templates/references/insect/insect.html
+++ b/src/main/resources/templates/references/insect/insect.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div id="script">
-    <script type="text/javascript" th:src="@{js/spider.js}"></script>
+    <script type="text/javascript" th:src="@{js/insect.js}"></script>
 </div>
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12 mt-5 mb-5">
-          <div th:replace="references/spider/actionBar"></div>
-            <div class="spider_list" th:fragment="spider_list">
+            <div th:replace="references/insect/actionBar"></div>
+            <div class="insect_list" th:fragment="insect_list">
                 <div th:replace="fragments/alert"></div>
-                <div th:replace="references/spider/spiderTable"></div>
+                <div th:replace="references/insect/insectTable"></div>
                 <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="addModalLabel"
                      aria-hidden="true"></div>
                 <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel"
                      aria-hidden="true"></div>
-                <div th:replace="references/spider/modal/deleteSpider"></div>
+                <div th:replace="references/insect/modal/deleteInsect"></div>
             </div>
         </div>
     </div>
