--- a/src/main/resources/templates/references/insect/insectTable.html
+++ b/src/main/resources/templates/references/insect/insectTable.html
@@ -5,33 +5,21 @@
     <thead class="table-secondary">
     <tr>
         <th scope="col">Название</th>
-        <th scope="col">Тип</th>
-        <th scope="col">Яд</th>
-        <th scope="col">Сложность</th>
-        <th scope="col">Опасность</th>
-        <th scope="col">Пол</th>
         <th scope="col">В наличии</th>
-        <th scope="col">Описание</th>
         <th scope="col">Цена</th>
         <th scope="col">Операции</th>
     </tr>
     </thead>
     <tbody>
-    <tr th:each="spider : ${spiders}" th:object="${spider}">
+    <tr th:each="insect : ${insect}" th:object="${insect}">
         <td th:text="*{name.getRusName()}"></td>
-        <td th:text="*{type}"></td>
-        <td th:text="*{toxic}"></td>
-        <td th:text="*{difficulty}"></td>
-        <td th:text="*{danger}"></td>
-        <td th:text="*{sex}"></td>
         <td th:text="*{quantity}"></td>
-        <td th:text="*{description}"></td>
         <td th:text="*{price}"></td>
         <td>
-            <a th:href="@{references/spiders/edit/(pid=*{pid})}" class="btn btn-warning editBtn">
+            <a th:href="@{references/insects/edit/(pid=*{pid})}" class="btn btn-warning editBtn">
                 Edit
             </a>
-            <a th:href="@{references/spiders/delete/(pid=*{pid})}" class="btn btn-danger deleteBtn">
+            <a th:href="@{references/insects/delete/(pid=*{pid})}" class="btn btn-danger deleteBtn">
                 Delete
             </a>
         </td>
