--- a/src/main/resources/templates/references/insect/modal/editInsect.html
+++ b/src/main/resources/templates/references/insect/modal/editInsect.html
@@ -8,94 +8,38 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <form th:action="@{references/spiders/updateSpider}" method="POST" th:object="${spider}" id="edit_spider">
-                <input type="hidden" name="pid" th:field="*{pid}" id="edit-spider-id">
+            <form th:action="@{references/insects/updateInsect}" method="POST" th:object="${insect}" id="edit_insect">
+                <input type="hidden" name="pid" th:field="*{pid}" id="edit-insect-id">
 
                 <div class="mb-1 w-25 h-25">
-                    <img class="card-img" th:src="@{references/spiders/image(pid=${spider.pid})}" />
+                    <img class="card-img" th:src="@{references/insects/image(pid=${insect.pid})}"/>
                 </div>
 
                 <div class="mb-3">
-                    <label for="edit-spider-name" class="col-form-label">Название:</label>
-                    <select name="name" class="form-select" id="edit-spider-name" required>
+                    <label for="edit-insect-name" class="col-form-label">Название:</label>
+                    <select name="name" class="form-select" id="edit-insect-name" required>
                         <option value="" selected="selected"></option>
-                        <option th:each="name: ${T(by.nurvazarov.generalnasa.model.product.spider.SpidersEnum).values()}"
+                        <option th:each="name: ${T(by.nurvazarov.generalnasa.model.product.insect.InsectEnum).values()}"
                                 th:value="${name}"
-                                th:text="${name}">
+                                th:text="${name.getRusName()}">
                         </option>
                     </select>
                 </div>
 
                 <div class="mb-3">
-                    <label for="edit-spider-type" class="col-form-label">Тип:</label>
-                    <select name="type" class="form-select" id="edit-spider-type" required>
-                        <option value="" selected="selected"></option>
-                        <option th:each="type: ${T(by.nurvazarov.generalnasa.model.product.spider.SpidersEnum).values()}"
-                                th:value="${type}"
-                                th:text="${type.getType()}">
-                        </option>
-                    </select>
+                    <label for="edit-quantityInsects" class="col-form-label">В наличии:</label>
+                    <input type="number" class="form-control" id="edit-quantityInsects" name="edit-quantityInsects">
                 </div>
 
                 <div class="mb-3">
-                    <label for="edit-spider-toxic" class="col-form-label">Токсичность:</label>
-                    <select name="toxic" class="form-select" id="edit-spider-toxic" required>
-                        <option value="" selected="selected"></option>
-                        <option th:each="toxic: ${T(by.nurvazarov.generalnasa.model.product.spider.SpidersEnum).values()}"
-                                th:value="${toxic}"
-                                th:text="${toxic.getToxic()}">
-                        </option>
-                    </select>
+                    <label for="edit-priceInsect" class="col-form-label">Цена:</label>
+                    <input type="number" class="form-control" id="edit-priceInsect" name="edit-priceInsect">
                 </div>
 
                 <div class="mb-3">
-                    <label for="edit-spider-difficult" class="col-form-label">Сложность:</label>
-                    <select name="difficult" class="form-select" id="edit-spider-difficult" required>
-                        <option value="" selected="selected"></option>
-                        <option th:each="difficult: ${T(by.nurvazarov.generalnasa.model.product.spider.SpidersEnum).values()}"
-                                th:value="${difficult}"
-                                th:text="${difficult.getDifficulty()}">
-                        </option>
-                    </select>
+                    <label for="edit-descriptionInsect" class="col-form-label">Описание:</label>
+                    <input type="text" class="form-control" id="edit-descriptionInsect" name="edit-descriptionInsect">
                 </div>
-
-                <div class="mb-3">
-                    <label for="edit-spider-danger" class="col-form-label">Опасность:</label>
-                    <select name="danger" class="form-select" id="edit-spider-danger" required>
-                        <option value="" selected="selected"></option>
-                        <option th:each="danger: ${T(by.nurvazarov.generalnasa.model.product.spider.SpidersEnum).values()}"
-                                th:value="${danger}"
-                                th:text="${danger.getDanger()}">
-                        </option>
-                    </select>
-                </div>
-
-                <div class="mb-3">
-                    <label for="edit-spider-sex" class="col-form-label">Пол:</label>
-                    <select name="sex" class="form-select" id="edit-spider-sex" required>
-                        <option value="" selected="selected"></option>
-                        <option th:each="sex: ${T(by.nurvazarov.generalnasa.model.product.spider.SpidersSex).values()}"
-                                th:value="${sex}"
-                                th:text="${sex}">
-                        </option>
-                    </select>
-                </div>
-
-                <div class="mb-3">
-                    <label for="edit-quantitySpiders" class="col-form-label">В наличии:</label>
-                    <input type="number" class="form-control" id="edit-quantitySpiders" name="edit-quantitySpiders">
-                </div>
-
-                <div class="mb-3">
-                    <label for="edit-priceSpider" class="col-form-label">Цена:</label>
-                    <input type="number" class="form-control" id="edit-priceSpider" name="edit-priceSpider">
-                </div>
-
-                <div class="mb-3">
-                    <label for="edit-descriptionSpider" class="col-form-label">Описание:</label>
-                    <input type="text" class="form-control" id="edit-descriptionSpider" name="edit-descriptionSpider">
-                </div>
-
 
 
                 <div class="modal-footer">
