--- a/src/main/resources/templates/references/equipment/equipment.html
+++ b/src/main/resources/templates/references/equipment/equipment.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div id="script">
-    <script type="text/javascript" th:src="@{js/spider.js}"></script>
+    <script type="text/javascript" th:src="@{js/equipment.js}"></script>
 </div>
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12 mt-5 mb-5">
-          <div th:replace="references/spider/actionBar"></div>
-            <div class="spider_list" th:fragment="spider_list">
+          <div th:replace="references/equipment/actionBar"></div>
+            <div class="equipment_list" th:fragment="equipment_list">
                 <div th:replace="fragments/alert"></div>
-                <div th:replace="references/spider/spiderTable"></div>
+                <div th:replace="references/equipment/equipmentTable"></div>
                 <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="addModalLabel"
                      aria-hidden="true"></div>
                 <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel"
                      aria-hidden="true"></div>
-                <div th:replace="references/spider/modal/deleteSpider"></div>
+                <div th:replace="references/equipment/modal/deleteEquipment"></div>
             </div>
         </div>
     </div>
