Equipment modalWindow deleteEquipment.html done

--- a/src/main/resources/templates/references/equipment/modal/deleteEquipment.html
+++ b/src/main/resources/templates/references/equipment/modal/deleteEquipment.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<div class="modal" id="deleteSpiderModal" tabindex="-1">
+<div class="modal" id="deleteEquipmentModal" tabindex="-1">
 
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="deleteModalLabelSpider">Удаление</h5>
+                <h5 class="modal-title" id="deleteModalLabelEquipment">Удаление</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -15,7 +15,7 @@
 
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <a href="" id="delSpider" type="button" class="btn btn-primary">I agree</a>
+                <a href="" id="delEquipment" type="button" class="btn btn-primary">I agree</a>
             </div>
         </div>
     </div>
