--- a/src/main/resources/templates/orders/order.html
+++ b/src/main/resources/templates/orders/order.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="fragments/header :: head(~{::script}, ~{})">
-    <script type="text/javascript" th:src="@{js/user.js}"></script>
+    <script type="text/javascript" th:src="@{js/order.js}"></script>
 </div>
 <header>
     <div th:replace="fragments/nav-bar :: nav_bar"></div>
@@ -9,15 +9,15 @@
 <main class="container-fluid">
     <div class="row">
         <div class="col-lg-12 mt-5 mb-5">
-            <div th:replace="users/actionBar"></div>
-            <div class="user_list" th:fragment="user_list">
+            <div th:replace="orders/actionBar"></div>
+            <div class="order_list" th:fragment="order_list">
                 <div th:replace="fragments/alert"></div>
-                <div th:replace="users/userTable"></div>
+                <div th:replace="orders/orderTable"></div>
                 <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="addModalLabel"
                      aria-hidden="true"></div>
                 <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel"
                      aria-hidden="true"></div>
-                <div th:replace="users/modal/deleteUser"></div>
+                <div th:replace="orders/modal/deleteOrder"></div>
             </div>
         </div>
     </div>
