--- a/src/main/resources/templates/fragments/nav-bar.html
+++ b/src/main/resources/templates/fragments/nav-bar.html
@@ -20,7 +20,7 @@
                 </li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN', 'LIBRARIAN')">
                     <a class="nav-link fs-5" th:classappend="${#strings.startsWith(view, '/statistics')? 'active':''}"
-                       aria-current="page" th:href="@{/statistics}">Заказы</a>
+                       aria-current="page" th:href="@{/orders/order}">Заказы</a>
                 </li>
 
                 <li class="nav-item" sec:authorize="hasAuthority('CUSTOMER')">
@@ -30,7 +30,8 @@
 
 
                 <li class="nav-item" sec:authorize="hasAuthority('CUSTOMER')">
-                    <a class="nav-link fs-5" th:classappend="${#strings.startsWith(view, '/personaloffice')? 'active':''}"
+                    <a class="nav-link fs-5"
+                       th:classappend="${#strings.startsWith(view, '/personaloffice')? 'active':''}"
                        aria-current="page" th:href="@{/personaloffice}">Личный кабинет</a>
                 </li>
 
