--- a/src/main/resources/templates/orders/modal/deleteOrder.html
+++ b/src/main/resources/templates/orders/modal/deleteOrder.html
@@ -4,7 +4,7 @@
 <div class="modal-dialog" role="document">
     <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title" id="deleteModalLabel">Удаление</h5>
+            <h5 class="modal-title" id="deleteModalLabelOrder">Удаление</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -13,7 +13,7 @@
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
             </button>
-            <a href="" id="delUser" type="button" class="btn btn-primary">Да, удалить</a>
+            <a href="" id="delOrder" type="button" class="btn btn-primary">Да, удалить</a>
         </div>
     </div>
 </div>
