--- a/src/main/resources/templates/orders/orderTable.html
+++ b/src/main/resources/templates/orders/orderTable.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<table class="table" >
+<table class="table">
     <thead class="table-secondary">
     <tr>
-        <th scope="col">Фамилия</th>
-        <th scope="col">Имя</th>
-        <th scope="col">Отчество</th>
-        <th scope="col">Логин</th>
-        <th scope="col">Роль</th>
-        <th scope="col">Статус</th>
+        <th scope="col">Заказчик</th>
+        <th scope="col">Статус заказа</th>
+        <th scope="col">Коментарий</th>
+        <th scope="col">Создан</th>
+        <th scope="col">Обновлён</th>
         <th scope="col">Операции</th>
     </tr>
     </thead>
+
     <tbody>
-    <tr th:each="user : ${users}" th:object="${user}">
+    <tr th:each="order : ${orders}" th:object="${order}">
         <td style="display: none">
             <div id="pid" th:text="*{pid}"></div>
         </td>
-        <td th:text="*{lastName}"></td>
-        <td th:text="*{firstName}"></td>
-        <td th:text="*{middleName}"></td>
-        <td th:text="*{login}"></td>
-        <td th:text="*{rolesStr}"></td>
-        <td th:text="*{status}"></td>
+        <td th:text="*{user.getFio()}"></td>
+        <td th:text="*{orderStatus.getRusText()}"></td>
+        <td th:text="*{comment}"></td>
+        <td th:text="*{createDate}"></td>
+        <td th:text="*{lastUpdateDate}"></td>
+
         <td>
-            <a th:href="@{users/edit/(pid=*{pid})}" class="btn btn-warning editBtn">
+            <a th:href="@{orders/edit/(pid=*{pid})}" class="btn btn-warning editBtn">
                 Edit
             </a>
-            <a th:href="@{users/delete/(pid=*{pid})}" class="btn btn-danger deleteBtn">
+            <a th:href="@{orders/delete/(pid=*{pid})}" class="btn btn-danger deleteBtn">
                 Delete
             </a>
         </td>
