--- a/src/main/resources/static/css/signin.css
+++ b/src/main/resources/static/css/signin.css
@@ -8,8 +8,11 @@ body {
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #f5f5f5;
+    /*background-color: #f5f5f5;*/
+    background: url(static/img/background.jpg);
+
 }
+
 
 .form-signin {
     width: 100%;
