--- a/src/main/resources/static/css/signin.css
+++ b/src/main/resources/static/css/signin.css
@@ -10,19 +10,24 @@ body {
     padding-bottom: 40px;
     /*background-color: #f5f5f5;*/
     background: url(static/img/background.jpg);
+    background-size: 100%, 100%;
+    background-repeat: no-repeat;
 
 }
 
 
 .form-signin {
     width: 100%;
-    max-width: 330px;
+    max-width: 250px;
     padding: 15px;
     margin: auto;
+    float: left;
 }
 
 .form-signin .checkbox {
     font-weight: 400;
+    position: relative;
+    bottom: -100px;
 }
 
 .form-signin .form-floating:focus-within {
@@ -39,4 +44,34 @@ body {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+}
+
+.btn{
+    background: #6bafb1;
+}
+
+ .btn:hover{
+     background: #dfe0e1;
+ }
+
+#wrapper {
+    width: 80%;
+    position: relative;
+    top: -200px;
+}
+
+.main-name {
+
+    color: #6bafb1;
+    position: relative;
+    top: 30%;
+    text-align: left;
+    padding-left: 30px;
+}
+
+#table {
+    float: left;
+    position: relative;
+    left: -79%;
+    top: 120px;
 }
